welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:5: error: not found: value color
setCouleurBrosse(color.RED)
                 ^